@@ -406,15 +406,6 @@
     ["salination-plant-2", "angels-salination-plant-2"],
     ["seafloor-pump", "angels-seafloor-pump"],
     ["sea-pump", "angels-sea-pump"],
-    ["slag-processing-1", "angels-slag-processing-1"],
-    ["slag-processing-2", "angels-slag-processing-2"],
-    ["slag-processing-3", "angels-slag-processing-3"],
-    ["slag-processing-4", "angels-slag-processing-4"],
-    ["slag-processing-5", "angels-slag-processing-5"],
-    ["slag-processing-6", "angels-slag-processing-6"],
-    ["slag-processing-7", "angels-slag-processing-7"],
-    ["slag-processing-8", "angels-slag-processing-8"],
-    ["slag-processing-9", "angels-slag-processing-9"],
     ["slag-processing-dissolution", "angels-slag-processing-dissolution"],
     ["slag-processing-filtering-1", "angels-slag-processing-filtering-1"],
     ["slag-processing-filtering-2", "angels-slag-processing-filtering-2"],
