@@ -8,11 +8,12 @@ data:extend({
     subgroup = "angels-slag-processing-1",
     energy_required = 8,
     enabled = false,
+    hidden = true,
     allow_decomposition = false,
     show_amount_in_title = false,
     always_show_products = true,
     ingredients = {
-      { type = "fluid", name = "angels-mineral-sludge", amount = 50 },
+      { type = "fluid", name = "angels-mineral-sludge", amount = 100 },
     },
     results = {
       { type = "item", name = "angels-void", amount = 1 },
@@ -28,11 +29,12 @@ data:extend({
     subgroup = "angels-slag-processing-1",
     energy_required = 8,
     enabled = false,
+    hidden = true,
     allow_decomposition = false,
     show_amount_in_title = false,
     always_show_products = true,
     ingredients = {
-      { type = "fluid", name = "angels-mineral-sludge", amount = 50 },
+      { type = "fluid", name = "angels-mineral-sludge", amount = 100 },
     },
     results = {
       { type = "item", name = "angels-void", amount = 1 },
@@ -48,11 +50,12 @@ data:extend({
     subgroup = "angels-slag-processing-1",
     energy_required = 8,
     enabled = false,
+    hidden = true,
     allow_decomposition = false,
     show_amount_in_title = false,
     always_show_products = true,
     ingredients = {
-      { type = "fluid", name = "angels-mineral-sludge", amount = 50 },
+      { type = "fluid", name = "angels-mineral-sludge", amount = 100 },
     },
     results = {
       { type = "item", name = "angels-void", amount = 1 },
@@ -64,15 +67,16 @@ data:extend({
     type = "recipe",
     name = "angels-slag-processing-4",
     localised_name = { "item-name.angels-void" },
-    category = "angels-crystallizing-2",
+    category = "angels-crystallizing",
     subgroup = "angels-slag-processing-1",
     energy_required = 8,
     enabled = false,
+    hidden = true,
     allow_decomposition = false,
     show_amount_in_title = false,
     always_show_products = true,
     ingredients = {
-      { type = "fluid", name = "angels-mineral-sludge", amount = 50 },
+      { type = "fluid", name = "angels-mineral-sludge", amount = 100 },
     },
     results = {
       { type = "item", name = "angels-void", amount = 1 },
@@ -84,15 +88,16 @@ data:extend({
     type = "recipe",
     name = "angels-slag-processing-5",
     localised_name = { "item-name.angels-void" },
-    category = "angels-crystallizing-2",
+    category = "angels-crystallizing",
     subgroup = "angels-slag-processing-1",
     energy_required = 8,
     enabled = false,
+    hidden = true,
     allow_decomposition = false,
     show_amount_in_title = false,
     always_show_products = true,
     ingredients = {
-      { type = "fluid", name = "angels-mineral-sludge", amount = 50 },
+      { type = "fluid", name = "angels-mineral-sludge", amount = 100 },
     },
     results = {
       { type = "item", name = "angels-void", amount = 1 },
@@ -104,81 +109,22 @@ data:extend({
     type = "recipe",
     name = "angels-slag-processing-6",
     localised_name = { "item-name.angels-void" },
-    category = "angels-crystallizing-2",
+    category = "angels-crystallizing",
     subgroup = "angels-slag-processing-1",
     energy_required = 8,
     enabled = false,
+    hidden = true,
     allow_decomposition = false,
     show_amount_in_title = false,
     always_show_products = true,
     ingredients = {
-      { type = "fluid", name = "angels-mineral-sludge", amount = 50 },
+      { type = "fluid", name = "angels-mineral-sludge", amount = 100 },
     },
     results = {
       { type = "item", name = "angels-void", amount = 1 },
     },
     crafting_machine_tint = angelsmods.functions.get_fluid_recipe_tint("angels-mineral-sludge"),
     order = "f",
-  },
-  {
-    type = "recipe",
-    name = "angels-slag-processing-7",
-    localised_name = { "item-name.angels-void" },
-    category = "angels-crystallizing-2",
-    subgroup = "angels-slag-processing-1",
-    energy_required = 8,
-    enabled = false,
-    allow_decomposition = false,
-    show_amount_in_title = false,
-    always_show_products = true,
-    ingredients = {
-      { type = "fluid", name = "angels-mineral-sludge", amount = 50 },
-    },
-    results = {
-      { type = "item", name = "angels-void", amount = 1 },
-    },
-    crafting_machine_tint = angelsmods.functions.get_fluid_recipe_tint("angels-mineral-sludge"),
-    order = "g",
-  },
-  {
-    type = "recipe",
-    name = "angels-slag-processing-8",
-    localised_name = { "item-name.angels-void" },
-    category = "angels-crystallizing-3",
-    subgroup = "angels-slag-processing-1",
-    energy_required = 8,
-    enabled = false,
-    allow_decomposition = false,
-    show_amount_in_title = false,
-    always_show_products = true,
-    ingredients = {
-      { type = "fluid", name = "angels-mineral-sludge", amount = 50 },
-    },
-    results = {
-      { type = "item", name = "angels-void", amount = 1 },
-    },
-    crafting_machine_tint = angelsmods.functions.get_fluid_recipe_tint("angels-mineral-sludge"),
-    order = "h",
-  },
-  {
-    type = "recipe",
-    name = "angels-slag-processing-9",
-    localised_name = { "item-name.angels-void" },
-    category = "angels-crystallizing-3",
-    subgroup = "angels-slag-processing-1",
-    energy_required = 8,
-    enabled = false,
-    allow_decomposition = false,
-    show_amount_in_title = false,
-    always_show_products = true,
-    ingredients = {
-      { type = "fluid", name = "angels-mineral-sludge", amount = 50 },
-    },
-    results = {
-      { type = "item", name = "angels-void", amount = 1 },
-    },
-    crafting_machine_tint = angelsmods.functions.get_fluid_recipe_tint("angels-mineral-sludge"),
-    order = "i",
   },
   {
     type = "recipe",
