@@ -12,6 +12,7 @@ Date: ???
     - Added Ore Sorting Facility 5. Catalyst sorting requires a higher tier ore sorting facility (979)
     - Updated for Factorio 2.0 (994)
     - Made heavy offshore pump ignore mining productivity research (1045)
+    - Reworked Mineral sludge crystallization recipes. These recipes now produce Angel's ores (1074)
     - Reworked milling drum recipes so that milling drums can be hand crafted (1105)
     - Added circuit connectors to all machines (1114)
     - Increased the size of Thermal water bores. Pipes will need to be reconnected. (1113)
